@@ -3,6 +3,7 @@ Description
     * First version of the App.
 Changes
     * Version 1.0 Build 01 (2017/03/01)
+        * Added support for displaying if it's today, tomorrow or yesterday in dates. (2017/02/21)
         * Added support for having a color for each task state. (2017/02/20)
         * Added support for adding tasks. (2017/02/20)
         * New L&F. (2017/02/19)
